# kfusion

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  devicequery.cpp  interface.cpp  interface.h  interface_config.hpp.cmake  interface_kinect.cpp  interface_kinect.hpp  interface_librealsense.cpp  interface_librealsense.hpp  interface_mskinect.cpp  interface_mskinect.hpp  interface_openni2.cpp  interface_openni2.hpp  kfusion.cu  kinect.cpp  perfstats.h  test.cpp
cmake/: FindLibRealSense.cmake  FindOpenNI2.cmake
